<resources>
    <string name="app_name">Qatar 2022</string>
    <string name="btnRecRes">record result</string>
    <string name="btnChkRes">check result</string>
    <string name="match_data">Enter the data of the match</string>
    <string name="nextBtn">next</string>
    <string name="btnCldr">date</string>
    <string name="btnPhase">phase</string>
    <string name="btnHomeTm">home team</string>
    <string name="btnAwayTm">away team</string>
    <string name="sel_team">Select a country</string>
    <string name="btnAccept">accept</string>
    <string name="btnArg">Argentina</string>
    <string name="btnAus">Australia</string>
    <string name="btnBlg">Belgium</string>
    <string name="btnBrz">Brazil</string>
    <string name="btnCmr">Cameroon</string>
    <string name="btnCnd">Canada</string>
    <string name="btnCstRc">Costarica</string>
    <string name="btnCrc">Croatia</string>
    <string name="btnDnmk">Denmark</string>
    <string name="btnEcd">Ecuador</string>
    <string name="btnEng">England</string>
    <string name="btnFr">France</string>
    <string name="btnGrm">Germany</string>
    <string name="btnGh">Ghana</string>
    <string name="btnIr">Iran</string>
    <string name="btnJp">Japan</string>
    <string name="btnMx">Mexico</string>
    <string name="btnMor">Morocco</string>
    <string name="btnNth">Netherlands</string>
    <string name="btnPl">Poland</string>
    <string name="btnPrt">Portugal</string>
    <string name="btnQt">Qatar</string>
    <string name="btnSdar">Saudiarabia</string>
    <string name="btnSn">Senegal</string>
    <string name="btnSrb">Serbia</string>
    <string name="btnStk">Southkorea</string>
    <string name="btnSp">Spain</string>
    <string name="btnSwz">Switzerland</string>
    <string name="btnTn">Tunisia</string>
    <string name="btnEeuu">EEUU</string>
    <string name="btnUrg">Uruguay</string>
    <string name="btnWal">Wales</string>
    <string name="check_res">View results of a country</string>
    <string name="btnSel">select</string>
    <string name="btnSave">save</string>
    <string name="btnReset">reset</string>
    <string name="selectPhase">Select a phase of the world cup</string>
    <string name="country">Country</string>
    <string name="team">Team</string>
    <string name="recResInvData">Please fill all the fields</string>
    <string name="recResValData">Data saved succesfully</string>
    <string name="selTmDupData">" is selected, please select another one"</string>
    <string name="selTmInvData">"Please select a team"</string>
    <string name="textHyphen">-</string>
    <string name="txtDate">Date</string>
    <string name="txtPhase">Phase</string>
    <string name="error">"Error: "</string>
    <string name="resError">" results are already stored"</string>
    <string name="searchError">no results found for the selected country</string>
    <string name="confirm">Confirm</string>
    <string name="restore">Are you sure you want to restore the saved data?</string>
    <string name="affirmative">Yes</string>
    <string name="negative">No</string>
    <string name="restorescfy">The data has been restored successfully</string>
</resources>